# RC6-software-systems-development

./: .gitignore  CMakeLists.txt
Kosenkov-64-1/: Makefile  README  README.md
Kosenkov-64-1/src/: main-modified.c  main.c
Kosenkov-64-2/: Dockerfile  Makefile  README.md  docker-compose.yml  text.txt
Kosenkov-64-2/include/: first_thread.h  general.h  main_thread.h  second_thread.h  string_handlers.h
Kosenkov-64-2/src/: first_thread.c  main.c  main_thread.c  main_thread_debug.c  second_thread.c  string_handlers.c
Kosenkov-64-3/: Makefile  README.md
Kosenkov-64-3/include/: buffers.h  general.h  http_client.h  parsers.h
Kosenkov-64-3/src/: buffers.c  http_client.c  main.c  parsers.c
Kosenkov-64-4/: Makefile  README
Kosenkov-64-4/src/: main.c
